@@ -7,7 +7,6 @@ import market.ApplicationRunner;
 import market.entity.User;
 import market.enums.Gender;
 import market.enums.Role;
-import market.repository.AddressRepository;
 import market.repository.UserRepository;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -20,9 +19,9 @@ import project.TestApplicationRunner;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static java.util.stream.Collectors.toList;
+import static market.util.StringContainer.ID;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.fail;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -35,15 +34,7 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 public class UserRepositoryTest {
     private final EntityManager entityManager;
 
-    private final AddressRepository addressRepository;
     private final UserRepository userRepository;
-
-
-
-
-
-
-
 
 
     @Test
@@ -87,8 +78,8 @@ public class UserRepositoryTest {
 
     @Test
     public void testDelete() {
-        userRepository.delete(userRepository.findAll().stream().sorted((o1, o2) -> Long.compare(o1.getId(), o2.getId()))
-                .collect(Collectors.toList()).get(userRepository.findAll().size() - 1));
+        userRepository.delete(userRepository.findAll().stream().sorted()
+                .toList().get(userRepository.findAll().size() - 1));
         entityManager.flush();
     }
 
@@ -96,17 +87,15 @@ public class UserRepositoryTest {
     public void testFind() {
         User user = userRepository.findById(1L).isPresent()
                 ? userRepository.findById(1L).get() : null;
+        assert user != null;
         assertThat(user.getName()).isEqualTo("Igor");
     }
 
     @Test
     public void testPage() {
-        var pageable = PageRequest.of(1,2, Sort.by("id"));
+        var pageable = PageRequest.of(1,2, Sort.by(ID));
         var users = userRepository.findAll(pageable);
         assertFalse(users.isEmpty());
         assertThat(users).hasSize(2);
     }
-
-
-
 }
